# alfred-world-clock

./: .gitignore  SETUP.md  conftest.py  info.plist  justfile  pyproject.toml
src/: create_meeting.py  data.py  formatters.py  helpers.py  main.py
src/pyflow/: __init__.py  cache.py  icon.py  item.py  workflow.py
tests/: test_create_meeting.py  test_data.py  test_formatters.py  test_item.py  test_main.py
tzdata/: country.csv  update.py
