[project]
name = "world-clock"
version = "2.3.0"
description = "Check time in multiple timezones."
license = "MIT"
authors = [
    { name = "Lam Chau", email = "lamchau@users.noreply.github.com" },
    { name = "Fede Calendino", email = "fede@calendino.com" },
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Documentation = "https://github.com/lamchau/alfred-world-clock/blob/main/README.md"
Homepage = "https://github.com/lamchau/alfred-world-clock"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 150

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
